--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(31, 31, 31);
 }
 a {
   text-decoration: none;
@@ -23,10 +24,11 @@ a {
   left: 0;
   width: 100vw;
   height: 5em;
-  background-color: rgb(31, 31, 31);
   display: flex;
   align-items: center;
   justify-content: space-between;
   color: rgb(240, 235, 230);
   border-bottom: solid 3px yellowgreen;
+  background-color: rgb(31, 31, 31);
+  box-shadow: 0 -.3em 1em greenyellow;
 }
