--- a/src/static/sidebar.css
+++ b/src/static/sidebar.css
@@ -33,7 +33,7 @@
     background: linear-gradient(to bottom, rgba(131, 122, 122, 0), rgba(131, 122, 122, 0), rgba(71, 168, 42, 0.87), rgb(66, 66, 224));
     padding: 0 0 .2em 0;
     border-radius: .3em;
-    font-size: larger;
+    font-size: 1.75em;
 }
 .coverNavText{
     background-color: rgb(31,31,31);
@@ -41,13 +41,14 @@
     padding: 0 .3em;
     color:rgb(229, 234, 252);
     transition: ease-out .2s;
+    font-family: "Oleo Script Swash Caps", "Lily Script One", Script MT, Brush Script MT;
 }
 .coverNavText:hover{
     font-size: 1.1em;
     transform: rotate(2.5deg);
     color: yellowgreen
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 955px) {
 .logoHolder{
     width: auto;
 }
