--- a/src/static/sidebar.css
+++ b/src/static/sidebar.css
@@ -52,7 +52,10 @@
 .logoHolder{
     width: auto;
 }
-#aboutMeNav{
+#projectNav{
     display: none;
-}    
+}
+#experNav{
+    display: none;
+}
 }
