--- a/src/static/sidebar.css
+++ b/src/static/sidebar.css
@@ -1,5 +1,5 @@
 .logoHolder{
-    width: 100%;
+    width: 35%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,7 +52,13 @@
 .logoHolder{
     width: auto;
 }
+#projectNav{
+    display: none;
+}
+#experNav{
+    display: none;
+}
 #aboutMeNav{
     display: none;
-}    
+}
 }
