--- a/src/static/body.css
+++ b/src/static/body.css
@@ -94,6 +94,7 @@
     font-weight: 900;
     font-size: 2em;
     color: rgb(226, 228, 250);
+    text-align: center;
 }
 .W-Blue{
     color: rgb(63, 63, 226);
